--- a/content/manual/problems/standard-model.mdx
+++ b/content/manual/problems/standard-model.mdx
@@ -1,284 +1,188 @@
-```mdx
----
-title: "The Standard Model Isn’t an Accident — It’s the Only Admissible Answer"
-description: "A reconstruction claim: under determinant-closure + strict admissibility, the Standard Model gauge group and one-generation chiral spectrum are forced as the complete restriction of a single SO(10) spinor, with embedding-fixed hypercharge and automatic anomaly cancellation."
-keywords:
-  - Standard Model reconstruction
-  - SO(10) grand unification
-  - hypercharge quantization
-  - anomaly cancellation
-  - determinant closure
-  - particle physics
-  - gauge theory
-  - fermion generations
-  - right-handed neutrino
-  - GUT theory
-author: "Jeremy Rodgers"
-date: "2026-02-08"
-canonical: "https://doi.org/10.5281/zenodo.18475611"
-schema:
-  "@context": "https://schema.org"
-  "@type": "ScholarlyArticle"
-  headline: "Structural Reconstruction of the Standard Model from Determinant-Closed SO(10)"
-  author:
-    "@type": "Person"
-    name: "Jeremy Rodgers"
-  datePublished: "2026-02"
-  publisher:
-    "@type": "Organization"
-    name: "Zenodo"
-  isPartOf:
-    "@type": "CreativeWork"
-    name: "Everything Equation Research Program"
----
+# Structural Reconstruction of the Standard Model (Determinant-Closed SO(10))
 
-# The Standard Model Isn’t an Accident — It’s the Only Admissible Answer
+The Standard Model (SM) is an extraordinarily successful infrared theory — and it is also structurally unforgiving. Its gauge group, chiral fermion content, hypercharge quantization, and anomaly cancellations admit many algebraically conceivable “nearby” alternatives. Historically, we have treated the observed structure as contingent: something that works, but could have been otherwise.
 
-<Callout type="discovery">
-**This is not “SO(10) can contain the Standard Model.”**  
-This is: **once determinant-closure and admissibility are enforced, the Standard Model is what survives — and “nearby” alternatives do not.**
-</Callout>
+This article presents the core reconstruction claim of the accompanying paper:
 
-The Standard Model is an exceptionally successful infrared theory — and it is also structurally unforgiving. Algebra admits many “almost-SM” possibilities: altered gauge factors, rescaled hypercharge, extra chiral leftovers, anomaly fixes by hand. Historically we’ve treated the observed structure as contingent.
+**Within a determinant-closed SO(10) unification carrier, and under a strict admissibility discipline, the infrared Standard Model gauge group and one-generation chiral fermion content are not chosen — they are inherited as the complete restriction of a single SO(10) spinor (16_F), with embedding-fixed hypercharge and automatic anomaly cancellation.**
 
-This reconstruction makes the opposite claim:
-
-> **Within a determinant-closed SO(10) carrier, under a strict admissibility discipline, the infrared Standard Model gauge group and one-generation chiral fermion content arise as an inherited consequence of the complete restriction of a single SO(10) spinor `16_F`, with embedding-fixed hypercharge and automatic anomaly cancellation.**
-
-No symmetry-breaking history is assumed. No RG numerics. No Yukawas or masses. No “UV storytelling.”
-
-Just: **carrier → restriction → forced infrared record.**
+This is a reconstruction, not model-building. No symmetry-breaking history is assumed. No RG numerics. No Yukawas or masses. No speculative UV completion. Only representation theory plus admissibility.
 
 ---
 
-## What is being reconstructed (and what is not)
+## What is being reconstructed
 
-What is reconstructed:
+The reconstruction target is the observed infrared record:
 
-- Gauge group: `SU(3)_c × SU(2)_L × U(1)_Y`
-- One-generation chiral fermion content (LH Weyl), **including** a right-handed neutrino `ν_R`
-- Hypercharge quantization and normalization (**not** treated as tunable)
-- Cancellation of all relevant 4D anomalies: local gauge, mixed gauge, mixed gauge–gravity, and Witten’s `SU(2)_L` global anomaly
+* Gauge group: (SU(3)_c \times SU(2)_L \times U(1)_Y)
+* One-generation chiral fermion content (LH Weyl), including a right-handed neutrino (\nu_R)
+* Hypercharge quantization and normalization (not treated as tunable)
+* Cancellation of all relevant 4D anomalies: local gauge, mixed gauge, mixed gauge–gravity, and Witten’s (SU(2)_L) global anomaly
 
-What is not reconstructed (explicitly excluded):
+The central claim is **not** “SO(10) can contain the Standard Model” — that is textbook material.
 
-- Yukawa matrices, masses, mixings, CP phases
-- Higgs/scalar sector model-building
-- Symmetry-breaking dynamics
-- Threshold corrections, coupling unification numerics, RG running
-- Any speculative UV completion beyond the carrier statement
+The claim is:
 
-This is intentional: it isolates **structure** from **dynamics**.
+**Once admissibility is enforced as a selection criterion, only the complete restriction of a determinant-closed carrier — with embedding-fixed hypercharge and no low-energy chiral exotics — survives.**
+
+Everything else fails.
 
 ---
 
-## The reconstruction claim in one line
-
-The textbook statement is: “SO(10) can contain the SM.”
-
-The reconstruction statement is:
-
-> **Once admissibility is used as a selection criterion, only the complete restriction of a determinant-closed carrier — with embedding-fixed hypercharge and no low-energy chiral exotics — passes the filter.**
-
----
-
-## The two constraints that do the locking
+## The two constraints that force the result
 
 ### 1) Determinant-closed carrier (imported)
 
-The paper imports the carrier selection: `SO(10)` (or `Spin(10)`) as dominance-minimal within the declared admissibility/budget discipline, with per-generation matter hosted in a single spinor `16_F`.
+The paper imports the carrier selection: (SO(10)) (or (Spin(10))) as dominance-minimal within the declared admissibility and budget discipline.
 
-This is used conservatively: **enough structure to host a full chiral generation (including `ν_R`) without low-energy chiral add-ons**, and no more.
+This choice is conservative, not ambitious. (SO(10)) is the minimal simple carrier capable of hosting a full chiral generation — including (\nu_R) — without requiring low-energy chiral add-ons. Nothing smaller works without patching.
 
 ---
 
 ### 2) Embedding-fixed hypercharge (no rescaling freedom)
 
-Hypercharge is where “almost-SM” models typically hide: rescale `Y`, mix abelian factors, patch charges.
+Hypercharge is not allowed to float.
 
-**That freedom is forbidden here.**
+The reconstruction treats (U(1)_Y) normalization as inherited from embedding into a simple carrier. Arbitrary rescalings, ad hoc abelian mixing, and independent charge assignments are explicitly forbidden.
 
-Once the embedding is fixed, `U(1)_Y` is an *inherited generator*, with inherited normalization (conventionally `k_Y = 5/3`).
+The conventional normalization — equivalent to (k_Y = 5/3) — is fixed by the embedding.
 
-No arbitrary rescaling.  
-No ad hoc abelian mixing.  
-No charge assignments chosen independently of weights.
-
-This single rule deletes an entire zoo of fake-nearby alternatives.
+This single restriction deletes a vast class of “almost-SM” counterexamples. Historically, the abelian sector is where pathological models hide. Here, it is locked.
 
 ---
 
-## The descent (used for restriction only)
+## The descent: restriction, not history
 
-For representation bookkeeping, the reconstruction uses the standard chain:
+For representation bookkeeping, the reconstruction uses the standard chain
 
-```
+(SO(10) \supset SU(5) \supset SU(3)_c \times SU(2)_L \times U(1)_Y),
 
-SO(10) ⊃ SU(5) ⊃ SU(3)_c × SU(2)_L × U(1)_Y
+or equivalently the Pati–Salam route. These are representation-theoretically equivalent for fixing (Y) and decomposing (16_F).
 
-```
-
-(or the Pati–Salam route; representation-theoretically equivalent for fixing `Y` and decomposing `16_F`).
-
-This is **not** asserted as a symmetry-breaking history. It is used only to identify the embedded `U(1)_Y` generator and perform restriction.
+This chain is **not** asserted as a symmetry-breaking history. It is used only to identify the embedded (U(1)_Y) generator and perform restriction.
 
 ---
 
-## One generation from one irreducible: `16_F`
+## One generation from one irreducible: the (16_F)
 
-This is the sharpest structural signature:
+The sharpest statement of the reconstruction is simple:
 
-- One full chiral generation is hosted by a single irreducible: `16_F`
-- The infrared spectrum is the **complete restriction** of `16_F` to `SU(3)_c × SU(2)_L × U(1)_Y`
-- No incomplete multiplets and no extra low-energy chiral exotics are permitted
+**One generation comes from one irreducible.**
 
-The resulting one-generation template (LH Weyl notation) is:
+* A full chiral generation is hosted by a single SO(10) spinor (16_F).
+* The infrared fermion spectrum is the *complete restriction* of (16_F).
+* No incomplete multiplets and no extra low-energy chiral exotics are permitted.
 
-- `Q_L : (3, 2)_{+1/6}`
-- `u^c_R : (3̄, 1)_{−2/3}`
-- `d^c_R : (3̄, 1)_{+1/3}`
-- `L_L : (1, 2)_{−1/2}`
-- `e^c_R : (1, 1)_{+1}`
-- `ν_R : (1, 1)_0`
+The resulting one-generation spectrum (LH Weyl notation) is:
 
-Two consequences:
+* (Q_L : (3,2)_{+1/6})
+* (u^c_R : (\bar 3,1)_{-2/3})
+* (d^c_R : (\bar 3,1)_{+1/3})
+* (L_L : (1,2)_{-1/2})
+* (e^c_R : (1,1)_{+1})
+* (\nu_R : (1,1)_0)
 
-1. **Chirality is inherited.** You do not get to “pair things up” without adding conjugates — which admissibility forbids at the SM scale.
-2. **`ν_R` is structural.** It is present because the representation forces it, not because neutrino masses demand it.
+Two consequences follow immediately:
 
-#### Minimality signal: `ν_R` is not a bolt-on
+1. **Chirality is inherited.** Vectorlike pairing at the SM scale requires adding conjugates, which admissibility forbids.
+2. **(\nu_R) is structural.** It appears because the representation forces it, not because neutrino phenomenology demands it.
 
-A clean diagnostic separating “hosting” from “patching”:
+#### Minimality signal: (\nu_R) is not a bolt-on
 
-- `SO(10): 16` (with `ν_R` internal)
-- `SU(5) (+ν_R): 10 ⊕ 5̄ ⊕ 1` (with `ν_R` appended)
+A clean diagnostic separating hosting from patching:
 
-Under this reconstruction discipline, “append a singlet to fix it” is not allowed.
+* (SO(10):\ 16) (with (\nu_R) internal)
+* (SU(5)+\nu_R:\ 10 \oplus \bar 5 \oplus 1) (with (\nu_R) appended)
+
+Under the reconstruction discipline, “add a singlet to fix it” is not allowed.
 
 ---
 
-## Hypercharge quantization: discrete charges, not a dial
+## Hypercharge quantization: discrete, not adjustable
 
-Here “hypercharge quantization” is not a slogan. It means:
+Here, “hypercharge quantization” means:
 
-- `Y` is an embedded generator in `so(10)`
-- each multiplet’s `Y` is fixed discretely by representation weights
-- fractional electric charge is inherited, not tuned
+* (Y) is an embedded generator in (\mathfrak{so}(10))
+* Each multiplet’s charge is fixed discretely by representation weights
+* Fractional electric charge is inherited, not tuned
 
-And crucially:
+No rescaling of (Y).
+No arbitrary abelian mixing.
+No RG numerics or coupling unification required.
 
-- no `Y` rescaling  
-- no arbitrary `U(1)` mixing  
-- no use of coupling unification numerics or RG running required
-
-Charge structure is purely embedding + representation theory.
+Charge structure is pure embedding plus representation theory.
 
 ---
 
 ## Anomaly cancellation: inherited, not engineered
 
-A reconstruction that requires “extra chiral matter to cancel anomalies” is not a reconstruction — it is a repair job.
+A reconstruction that needs extra chiral matter to cancel anomalies is not a reconstruction — it is a repair.
 
-Here anomaly cancellation is inherited from **completeness of the `16_F` restriction** with embedding-fixed hypercharge.
+Here, anomaly cancellation follows automatically from the completeness of the (16_F) restriction with embedding-fixed hypercharge.
 
 The one-generation spectrum satisfies:
 
-- local gauge anomalies: `[SU(3)_c]^3`, `[SU(2)_L]^3`, `[U(1)_Y]^3`
-- mixed anomalies: `[SU(3)_c]^2 U(1)_Y`, `[SU(2)_L]^2 U(1)_Y`
-- mixed gauge–gravity: `U(1)_Y [Gravity]^2`
-- global: Witten `SU(2)_L` anomaly (even number of `SU(2)_L` doublets)
+* Local gauge anomalies: ([SU(3)_c]^3), ([SU(2)_L]^3), ([U(1)_Y]^3)
+* Mixed anomalies: ([SU(3)_c]^2 U(1)_Y), ([SU(2)_L]^2 U(1)_Y)
+* Mixed gauge–gravity: (U(1)_Y[\text{Gravity}]^2)
+* Global anomaly: Witten (SU(2)_L) condition
 
-### Explicit anomaly sums (one generation)
+Representative cancellations:
 
-#### `[SU(3)_c]^2 U(1)_Y`
+**([SU(3)_c]^2 U(1)_Y)**
+(1/6 - 1/3 + 1/6 = 0)
 
-Using `T(fund) = 1/2`:
+**([SU(2)_L]^2 U(1)_Y)**
+(1/4 - 1/4 = 0)
 
-```
+**Witten (SU(2)_L)**
+Four LH doublets per generation → even → allowed
 
-Q_L:   (1/2) · 2 · ( 1/6) =  1/6
-u^c_R: (1/2) · 1 · (−2/3) = −1/3
-d^c_R: (1/2) · 1 · ( 1/3) =  1/6
-
-Total = 0
-
-```
-
-#### `[SU(2)_L]^2 U(1)_Y`
-
-Sum over `SU(2)_L` doublets:
-
-```
-
-Q_L: (1/2) · 3 · ( 1/6) =  1/4
-L_L: (1/2) · 1 · (−1/2) = −1/4
-
-Total = 0
-
-```
-
-#### Witten `SU(2)_L` global anomaly
-
-Per generation:
-
-- `Q_L` contributes 3 doublets (one per color)
-- `L_L` contributes 1 doublet
-
-Total doublets = 4 (even) ⇒ global anomaly condition satisfied.
-
-These are not “imposed.” They are consequences of the fixed spectrum.
+No tuning. No fixes. No freedom.
 
 ---
 
-## Three generations: imported on purpose
+## Three generations: imported by design
 
-This paper does **not** derive the generation count. It imports `N_g = 3` and uses it only as a multiplicity factor (anomalies cancel additively).
+This paper does not derive the generation count. It imports (N_g = 3) and uses it only as a multiplicity factor. Anomalies cancel additively.
 
-That separation is not a weakness — it is discipline. It keeps the reconstruction result clean.
-
----
-
-## What is “resolution-like” about this (structurally)
-
-This has the markers of a resolution-class reconstruction:
-
-1. **Hard scope boundaries**  
-   Claims are narrow, explicit, and checkable.
-
-2. **Import discipline**  
-   Carrier selection, admissibility, and `N_g = 3` are treated as inputs, not re-litigated.
-
-3. **Necessity via exclusions**  
-   The admissibility filter forbids:
-   - extra unbroken gauge factors at the infrared record scale
-   - rescaling or mixing in the abelian sector
-   - low-energy chiral exotics to “fix” anomalies
-   - incomplete restriction of the carrier multiplet
-
-4. **One irreducible hosts one generation**  
-   `16_F` carries the full chiral record including `ν_R`; the SM spectrum is the complete restriction.
-
-This is the kind of claim an expert can audit without interpretation.
+This separation is deliberate. It keeps the structural reconstruction clean and auditable.
 
 ---
 
-## Fast audit checklist (do it in under an hour)
+## Why this is resolution-class (structurally)
 
-1. Verify the one-generation spectrum (including `ν_R`).
-2. Verify embedding-fixed hypercharge normalization (`k_Y = 5/3` convention).
-3. Check `[SU(3)]^2 U(1)` and `[SU(2)]^2 U(1)` cancellations.
-4. Check `[U(1)]^3` and `U(1)[Gravity]^2` sums.
-5. Check Witten `SU(2)_L` condition (even number of doublets).
-6. Confirm no extra chiral exotics were added at the SM scale.
+Without sociological claims, the reconstruction has the hallmarks of a genuine resolution:
 
-If these pass, the reconstruction has done exactly what it claims.
+1. **Hard scope control** — nothing extra is smuggled in.
+2. **Import discipline** — carrier selection and (N_g) are fixed inputs.
+3. **Necessity via exclusion** — admissibility forbids:
+
+   * extra unbroken gauge factors,
+   * hypercharge rescaling or mixing,
+   * low-energy chiral exotics,
+   * incomplete carrier restriction.
+4. **One irreducible hosts one generation** — including (\nu_R).
+
+An expert can audit every step.
+
+---
+
+## How to verify it quickly
+
+1. Check the one-generation spectrum (including (\nu_R)).
+2. Check embedding-fixed hypercharge normalization.
+3. Verify mixed anomalies.
+4. Verify cubic and gravitational anomalies.
+5. Check the Witten (SU(2)_L) condition.
+6. Confirm no extra chiral exotics were added.
+
+If these pass, the conclusion follows.
 
 ---
 
 ## Primary reference
 
-<PaperCTA>
-**Structural Reconstruction of the Standard Model from SO(10): Gauge Group, Fermion Content, and Anomaly Cancellation**  
-DOI: [10.5281/zenodo.18475611](https://doi.org/10.5281/zenodo.18475611)
-</PaperCTA>
-```
+**Structural Reconstruction of the Standard Model from SO(10): Gauge Group, Fermion Content, and Anomaly Cancellation**
+DOI: [https://doi.org/10.5281/zenodo.18475611](https://doi.org/10.5281/zenodo.18475611)
+
