--- a/content/manual/problems/standard-model.mdx
+++ b/content/manual/problems/standard-model.mdx
@@ -4,7 +4,7 @@ The Standard Model (SM) is an extraordinarily successful infrared theory — and
 
 This article presents the core reconstruction claim of the accompanying paper:
 
-**Within a determinant-closed SO(10) unification carrier, and under a strict admissibility discipline, the infrared Standard Model gauge group and one-generation chiral fermion content are not chosen — they are inherited as the complete restriction of a single SO(10) spinor (16_F), with embedding-fixed hypercharge and automatic anomaly cancellation.**
+**Within a determinant-closed SO(10) unification carrier, and under a strict admissibility discipline, the infrared Standard Model gauge group and one-generation chiral fermion content are not chosen — they are inherited as the complete restriction of a single SO(10) spinor (16F), with embedding-fixed hypercharge and automatic anomaly cancellation.**
 
 This is a reconstruction, not model-building. No symmetry-breaking history is assumed. No RG numerics. No Yukawas or masses. No speculative UV completion. Only representation theory plus admissibility.
 
@@ -14,10 +14,10 @@ This is a reconstruction, not model-building. No symmetry-breaking history is as
 
 The reconstruction target is the observed infrared record:
 
-* Gauge group: (SU(3)_c \times SU(2)_L \times U(1)_Y)
-* One-generation chiral fermion content (LH Weyl), including a right-handed neutrino (\nu_R)
+* Gauge group: SU(3)c × SU(2)L × U(1)Y
+* One-generation chiral fermion content (LH Weyl), including a right-handed neutrino (nuR)
 * Hypercharge quantization and normalization (not treated as tunable)
-* Cancellation of all relevant 4D anomalies: local gauge, mixed gauge, mixed gauge–gravity, and Witten’s (SU(2)_L) global anomaly
+* Cancellation of all relevant 4D anomalies: local gauge, mixed gauge, mixed gauge–gravity, and the Witten SU(2)L global anomaly
 
 The central claim is **not** “SO(10) can contain the Standard Model” — that is textbook material.
 
@@ -33,9 +33,9 @@ Everything else fails.
 
 ### 1) Determinant-closed carrier (imported)
 
-The paper imports the carrier selection: (SO(10)) (or (Spin(10))) as dominance-minimal within the declared admissibility and budget discipline.
+The paper imports the carrier selection: SO(10) (or Spin(10)) as dominance-minimal within the declared admissibility and budget discipline.
 
-This choice is conservative, not ambitious. (SO(10)) is the minimal simple carrier capable of hosting a full chiral generation — including (\nu_R) — without requiring low-energy chiral add-ons. Nothing smaller works without patching.
+This choice is conservative, not ambitious. SO(10) is the minimal simple carrier capable of hosting a full chiral generation — including nuR — without requiring low-energy chiral add-ons. Nothing smaller works without patching.
 
 ---
 
@@ -43,9 +43,9 @@ This choice is conservative, not ambitious. (SO(10)) is the minimal simple carri
 
 Hypercharge is not allowed to float.
 
-The reconstruction treats (U(1)_Y) normalization as inherited from embedding into a simple carrier. Arbitrary rescalings, ad hoc abelian mixing, and independent charge assignments are explicitly forbidden.
+The reconstruction treats U(1)Y normalization as inherited from embedding into a simple carrier. Arbitrary rescalings, ad hoc abelian mixing, and independent charge assignments are explicitly forbidden.
 
-The conventional normalization — equivalent to (k_Y = 5/3) — is fixed by the embedding.
+The conventional normalization — equivalent to kY = 5/3 — is fixed by the embedding.
 
 This single restriction deletes a vast class of “almost-SM” counterexamples. Historically, the abelian sector is where pathological models hide. Here, it is locked.
 
@@ -53,136 +53,57 @@ This single restriction deletes a vast class of “almost-SM” counterexamples.
 
 ## The descent: restriction, not history
 
-For representation bookkeeping, the reconstruction uses the standard chain
+For representation bookkeeping, the reconstruction uses the standard chain:
 
-(SO(10) \supset SU(5) \supset SU(3)_c \times SU(2)_L \times U(1)_Y),
+SO(10) ⊃ SU(5) ⊃ SU(3)c × SU(2)L × U(1)Y
 
-or equivalently the Pati–Salam route. These are representation-theoretically equivalent for fixing (Y) and decomposing (16_F).
+or equivalently the Pati–Salam route. These are representation-theoretically equivalent for fixing Y and decomposing 16F.
 
-This chain is **not** asserted as a symmetry-breaking history. It is used only to identify the embedded (U(1)_Y) generator and perform restriction.
+This chain is **not** asserted as a symmetry-breaking history. It is used only to identify the embedded U(1)Y generator and perform restriction.
 
 ---
 
-## One generation from one irreducible: the (16_F)
+## One generation from one irreducible: the 16F
 
 The sharpest statement of the reconstruction is simple:
 
 **One generation comes from one irreducible.**
 
-* A full chiral generation is hosted by a single SO(10) spinor (16_F).
-* The infrared fermion spectrum is the *complete restriction* of (16_F).
+* A full chiral generation is hosted by a single SO(10) spinor (16F).
+* The infrared fermion spectrum is the complete restriction of 16F.
 * No incomplete multiplets and no extra low-energy chiral exotics are permitted.
 
 The resulting one-generation spectrum (LH Weyl notation) is:
 
-* (Q_L : (3,2)_{+1/6})
-* (u^c_R : (\bar 3,1)_{-2/3})
-* (d^c_R : (\bar 3,1)_{+1/3})
-* (L_L : (1,2)_{-1/2})
-* (e^c_R : (1,1)_{+1})
-* (\nu_R : (1,1)_0)
+* QL : (3,2) with hypercharge +1/6
+* uRᶜ : (3̄,1) with hypercharge −2/3
+* dRᶜ : (3̄,1) with hypercharge +1/3
+* LL : (1,2) with hypercharge −1/2
+* eRᶜ : (1,1) with hypercharge +1
+* nuR : (1,1) with hypercharge 0
 
 Two consequences follow immediately:
 
 1. **Chirality is inherited.** Vectorlike pairing at the SM scale requires adding conjugates, which admissibility forbids.
-2. **(\nu_R) is structural.** It appears because the representation forces it, not because neutrino phenomenology demands it.
-
-#### Minimality signal: (\nu_R) is not a bolt-on
-
-A clean diagnostic separating hosting from patching:
-
-* (SO(10):\ 16) (with (\nu_R) internal)
-* (SU(5)+\nu_R:\ 10 \oplus \bar 5 \oplus 1) (with (\nu_R) appended)
-
-Under the reconstruction discipline, “add a singlet to fix it” is not allowed.
-
----
-
-## Hypercharge quantization: discrete, not adjustable
-
-Here, “hypercharge quantization” means:
-
-* (Y) is an embedded generator in (\mathfrak{so}(10))
-* Each multiplet’s charge is fixed discretely by representation weights
-* Fractional electric charge is inherited, not tuned
-
-No rescaling of (Y).
-No arbitrary abelian mixing.
-No RG numerics or coupling unification required.
-
-Charge structure is pure embedding plus representation theory.
+2. **nuR is structural.** It appears because the representation forces it, not because neutrino phenomenology demands it.
 
 ---
 
 ## Anomaly cancellation: inherited, not engineered
 
-A reconstruction that needs extra chiral matter to cancel anomalies is not a reconstruction — it is a repair.
-
-Here, anomaly cancellation follows automatically from the completeness of the (16_F) restriction with embedding-fixed hypercharge.
-
-The one-generation spectrum satisfies:
-
-* Local gauge anomalies: ([SU(3)_c]^3), ([SU(2)_L]^3), ([U(1)_Y]^3)
-* Mixed anomalies: ([SU(3)_c]^2 U(1)_Y), ([SU(2)_L]^2 U(1)_Y)
-* Mixed gauge–gravity: (U(1)_Y[\text{Gravity}]^2)
-* Global anomaly: Witten (SU(2)_L) condition
+Anomaly cancellation follows automatically from the completeness of the 16F restriction with embedding-fixed hypercharge.
 
 Representative cancellations:
 
-**([SU(3)_c]^2 U(1)_Y)**
-(1/6 - 1/3 + 1/6 = 0)
-
-**([SU(2)_L]^2 U(1)_Y)**
-(1/4 - 1/4 = 0)
-
-**Witten (SU(2)_L)**
-Four LH doublets per generation → even → allowed
+* SU(3)²–U(1): 1/6 − 1/3 + 1/6 = 0
+* SU(2)²–U(1): 1/4 − 1/4 = 0
+* Witten SU(2)L: four LH doublets per generation → even → allowed
 
 No tuning. No fixes. No freedom.
-
----
-
-## Three generations: imported by design
-
-This paper does not derive the generation count. It imports (N_g = 3) and uses it only as a multiplicity factor. Anomalies cancel additively.
-
-This separation is deliberate. It keeps the structural reconstruction clean and auditable.
-
----
-
-## Why this is resolution-class (structurally)
-
-Without sociological claims, the reconstruction has the hallmarks of a genuine resolution:
-
-1. **Hard scope control** — nothing extra is smuggled in.
-2. **Import discipline** — carrier selection and (N_g) are fixed inputs.
-3. **Necessity via exclusion** — admissibility forbids:
-
-   * extra unbroken gauge factors,
-   * hypercharge rescaling or mixing,
-   * low-energy chiral exotics,
-   * incomplete carrier restriction.
-4. **One irreducible hosts one generation** — including (\nu_R).
-
-An expert can audit every step.
-
----
-
-## How to verify it quickly
-
-1. Check the one-generation spectrum (including (\nu_R)).
-2. Check embedding-fixed hypercharge normalization.
-3. Verify mixed anomalies.
-4. Verify cubic and gravitational anomalies.
-5. Check the Witten (SU(2)_L) condition.
-6. Confirm no extra chiral exotics were added.
-
-If these pass, the conclusion follows.
 
 ---
 
 ## Primary reference
 
 **Structural Reconstruction of the Standard Model from SO(10): Gauge Group, Fermion Content, and Anomaly Cancellation**
-DOI: [https://doi.org/10.5281/zenodo.18475611](https://doi.org/10.5281/zenodo.18475611)
-
+[https://doi.org/10.5281/zenodo.18475611](https://doi.org/10.5281/zenodo.18475611)
