--- a/content/manual/problems/standard-model.mdx
+++ b/content/manual/problems/standard-model.mdx
@@ -1,10 +1,10 @@
 # Structural Reconstruction of the Standard Model (Determinant-Closed SO(10))
 
-The Standard Model (SM) is an extraordinarily successful infrared theory — and it is also structurally unforgiving. Its gauge group, chiral fermion content, hypercharge quantization, and anomaly cancellations admit many algebraically conceivable “nearby” alternatives. Historically, we have treated the observed structure as contingent: something that works, but could have been otherwise.
+The Standard Model (SM) is an extraordinarily successful infrared theory and it is also structurally unforgiving. Its gauge group, chiral fermion content, hypercharge quantization, and anomaly cancellations admit many algebraically conceivable “nearby” alternatives. Historically, we have treated the observed structure as contingent: something that works, but could have been otherwise.
 
 This article presents the core reconstruction claim of the accompanying paper:
 
-**Within a determinant-closed SO(10) unification carrier, and under a strict admissibility discipline, the infrared Standard Model gauge group and one-generation chiral fermion content are not chosen — they are inherited as the complete restriction of a single SO(10) spinor (16F), with embedding-fixed hypercharge and automatic anomaly cancellation.**
+**Within a determinant-closed SO(10) unification carrier, and under a strict admissibility discipline, the infrared Standard Model gauge group and one-generation chiral fermion content are not chosen, they are inherited as the complete restriction of a single SO(10) spinor (16F), with embedding-fixed hypercharge and automatic anomaly cancellation.**
 
 This is a reconstruction, not model-building. No symmetry-breaking history is assumed. No RG numerics. No Yukawas or masses. No speculative UV completion. Only representation theory plus admissibility.
 
@@ -19,11 +19,11 @@ The reconstruction target is the observed infrared record:
 * Hypercharge quantization and normalization (not treated as tunable)
 * Cancellation of all relevant 4D anomalies: local gauge, mixed gauge, mixed gauge–gravity, and the Witten SU(2)L global anomaly
 
-The central claim is **not** “SO(10) can contain the Standard Model” — that is textbook material.
+The central claim is **not** “SO(10) can contain the Standard Model” that is textbook material.
 
 The claim is:
 
-**Once admissibility is enforced as a selection criterion, only the complete restriction of a determinant-closed carrier — with embedding-fixed hypercharge and no low-energy chiral exotics — survives.**
+**Once admissibility is enforced as a selection criterion, only the complete restriction of a determinant-closed carrier with embedding-fixed hypercharge and no low-energy chiral exotics survives.**
 
 Everything else fails.
 
@@ -35,7 +35,7 @@ Everything else fails.
 
 The paper imports the carrier selection: SO(10) (or Spin(10)) as dominance-minimal within the declared admissibility and budget discipline.
 
-This choice is conservative, not ambitious. SO(10) is the minimal simple carrier capable of hosting a full chiral generation — including nuR — without requiring low-energy chiral add-ons. Nothing smaller works without patching.
+This choice is conservative, not ambitious. SO(10) is the minimal simple carrier capable of hosting a full chiral generation including nuR without requiring low-energy chiral add-ons. Nothing smaller works without patching.
 
 ---
 
@@ -45,7 +45,7 @@ Hypercharge is not allowed to float.
 
 The reconstruction treats U(1)Y normalization as inherited from embedding into a simple carrier. Arbitrary rescalings, ad hoc abelian mixing, and independent charge assignments are explicitly forbidden.
 
-The conventional normalization — equivalent to kY = 5/3 — is fixed by the embedding.
+The conventional normalization equivalent to kY = 5/3 is fixed by the embedding.
 
 This single restriction deletes a vast class of “almost-SM” counterexamples. Historically, the abelian sector is where pathological models hide. Here, it is locked.
 
@@ -107,3 +107,4 @@ No tuning. No fixes. No freedom.
 
 **Structural Reconstruction of the Standard Model from SO(10): Gauge Group, Fermion Content, and Anomaly Cancellation**
 [https://doi.org/10.5281/zenodo.18475611](https://doi.org/10.5281/zenodo.18475611)
+
