--- a/content/manual/problems/standard-model.mdx
+++ b/content/manual/problems/standard-model.mdx
@@ -1,5 +1,5 @@
 # The Standard Model Is Not an Accident
-# Structural Reconstruction of the Standard Model (Determinant-Closed SO(10))
+## Structural Reconstruction of the Standard Model (Determinant-Closed SO(10))
 
 The Standard Model (SM) is an extraordinarily successful infrared theory and it is also structurally unforgiving. Its gauge group, chiral fermion content, hypercharge quantization, and anomaly cancellations admit many algebraically conceivable “nearby” alternatives. Historically, we have treated the observed structure as contingent: something that works, but could have been otherwise.
 
@@ -108,5 +108,6 @@ No tuning. No fixes. No freedom.
 
 **Structural Reconstruction of the Standard Model from SO(10): Gauge Group, Fermion Content, and Anomaly Cancellation**
 [https://doi.org/10.5281/zenodo.18475611](https://doi.org/10.5281/zenodo.18475611)
+
 
 
