--- a/content/manual/problems/standard-model.mdx
+++ b/content/manual/problems/standard-model.mdx
@@ -5,7 +5,7 @@ The Standard Model (SM) is an extraordinarily successful infrared theory and it 
 
 This article presents the core reconstruction claim of the accompanying paper:
 
-**Within a determinant-closed SO(10) unification carrier, and under a strict admissibility discipline, the infrared Standard Model gauge group and one-generation chiral fermion content are not chosen, they are inherited as the complete restriction of a single SO(10) spinor (16F), with embedding-fixed hypercharge and automatic anomaly cancellation.**
+Within a determinant-closed SO(10) unification carrier, and under a strict admissibility discipline, the infrared Standard Model gauge group and one-generation chiral fermion content are not chosen, they are inherited as the complete restriction of a single SO(10) spinor (16F), with embedding-fixed hypercharge and automatic anomaly cancellation.
 
 This is a reconstruction, not model-building. No symmetry-breaking history is assumed. No RG numerics. No Yukawas or masses. No speculative UV completion. Only representation theory plus admissibility.
 
@@ -108,6 +108,7 @@ No tuning. No fixes. No freedom.
 
 **Structural Reconstruction of the Standard Model from SO(10): Gauge Group, Fermion Content, and Anomaly Cancellation**
 [https://doi.org/10.5281/zenodo.18475611](https://doi.org/10.5281/zenodo.18475611)
+
 
 
 
