--- a/content/manual/problems/standard-model.mdx
+++ b/content/manual/problems/standard-model.mdx
@@ -24,7 +24,7 @@ The central claim is **not** “SO(10) can contain the Standard Model” that is
 
 The claim is:
 
-**Once admissibility is enforced as a selection criterion, only the complete restriction of a determinant-closed carrier with embedding-fixed hypercharge and no low-energy chiral exotics survives.**
+***Once admissibility is enforced as a selection criterion, only the complete restriction of a determinant-closed carrier with embedding-fixed hypercharge and no low-energy chiral exotics survives.***
 
 Everything else fails.
 
@@ -108,6 +108,7 @@ No tuning. No fixes. No freedom.
 
 **Structural Reconstruction of the Standard Model from SO(10): Gauge Group, Fermion Content, and Anomaly Cancellation**
 [https://doi.org/10.5281/zenodo.18475611](https://doi.org/10.5281/zenodo.18475611)
+
 
 
 
