--- a/content/manual/problems/standard-model.mdx
+++ b/content/manual/problems/standard-model.mdx
@@ -11,7 +11,7 @@ This is a reconstruction, not model-building. No symmetry-breaking history is as
 
 ---
 
-## What is being reconstructed
+## Reconstruction Target
 
 The reconstruction target is the observed infrared record:
 
@@ -20,7 +20,7 @@ The reconstruction target is the observed infrared record:
 * Hypercharge quantization and normalization (not treated as tunable)
 * Cancellation of all relevant 4D anomalies: local gauge, mixed gauge, mixed gauge–gravity, and the Witten SU(2)L global anomaly
 
-The central claim is **not** “SO(10) can contain the Standard Model” that is textbook material.
+The central claim is not “SO(10) can contain the Standard Model” that is textbook material.
 
 The claim is:
 
@@ -108,6 +108,7 @@ No tuning. No fixes. No freedom.
 
 **Structural Reconstruction of the Standard Model from SO(10): Gauge Group, Fermion Content, and Anomaly Cancellation**
 [https://doi.org/10.5281/zenodo.18475611](https://doi.org/10.5281/zenodo.18475611)
+
 
 
 
