--- a/content/manual/problems/standard-model.mdx
+++ b/content/manual/problems/standard-model.mdx
@@ -1,13 +1,16 @@
----
-schema:
-  "@context": "https://schema.org"
-  "@type": "ScholarlyArticle"
-  headline: "Structural Reconstruction of the Standard Model from Determinant-Closed SO(10)"
-  author:
-    "@type": "Person"
-    name: "Jeremy Rodgers"
-  datePublished: "2026-02"
----
+<script
+  type="application/ld+json"
+  dangerouslySetInnerHTML={{
+    __html: JSON.stringify({
+      "@context": "https://schema.org",
+      "@type": "ScholarlyArticle",
+      headline: "Structural Reconstruction of the Standard Model from Determinant-Closed SO(10)",
+      author: { "@type": "Person", name: "Jeremy Rodgers" },
+      datePublished: "2026-02"
+    })
+  }}
+/>
+
 
 # The Standard Model Is Not an Accident
 ## Structural Reconstruction of the Standard Model (Determinant-Closed SO(10))
@@ -119,6 +122,7 @@ No tuning. No fixes. No freedom.
 
 **Structural Reconstruction of the Standard Model from SO(10): Gauge Group, Fermion Content, and Anomaly Cancellation**
 [https://doi.org/10.5281/zenodo.18475611](https://doi.org/10.5281/zenodo.18475611)
+
 
 
 
