--- a/content/manual/problems/standard-model.mdx
+++ b/content/manual/problems/standard-model.mdx
@@ -1,17 +1,11 @@
-title: "The Standard Model Is Not an Accident"
-description: "Structural reconstruction of the Standard Model from determinant-closed SO(10): inherited gauge group, embedding-fixed hypercharge, automatic anomaly cancellation."
-date: "2026-02-08"
-canonical: "https://doi.org/10.5281/zenodo.18475611
-"
-schema:
-"@context": "https://schema.org
-"
-"@type": "ScholarlyArticle"
-headline: "Structural Reconstruction of the Standard Model from Determinant-Closed SO(10)"
-author:
-"@type": "Person"
-name: "Jeremy Rodgers"
-datePublished: "2026-02"
+export const schema = {
+  "@context": "https://schema.org",
+  "@type": "ScholarlyArticle",
+  headline: "Structural Reconstruction of the Standard Model from Determinant-Closed SO(10)",
+  author: { "@type": "Person", name: "Jeremy Rodgers" },
+  datePublished: "2026-02",
+};
+
 
 # The Standard Model Is Not an Accident
 ## Structural Reconstruction of the Standard Model (Determinant-Closed SO(10))
@@ -123,6 +117,7 @@ No tuning. No fixes. No freedom.
 
 **Structural Reconstruction of the Standard Model from SO(10): Gauge Group, Fermion Content, and Anomaly Cancellation**
 [https://doi.org/10.5281/zenodo.18475611](https://doi.org/10.5281/zenodo.18475611)
+
 
 
 
